app/javascript/src/styles/views/posts/show/partials/_post_toolbar.scss
// Post Toolbar
#ptbr-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;

  margin: 0.5rem 0;
  gap: 0.5rem;

  @include window-larger-than(50rem) {
    justify-content: flex-start;
  }
}


// Voting section
#ptbr-wrapper .ptbr-vote {
  display: flex;
  @include st-radius;

  // Vote actions buttons
  button {
    svg { margin: -0.5rem -0.5rem; }  // Makes buttons square

    &[data-action="-1"] { @include st-radius-right; }
    &[data-action="1"] { @include st-radius-left; }
  }

  // Vote states
  // data-vote on the wrapper indicates user's current vote on the post
  // data-action on the button indicates whether the button is for upvote or downvote
  &[data-vote="-1"] button[data-action="-1"] {
    background-color: palette("background-red");
    &:hover, &:focus { background-color: palette("background-red-d5"); }

    box-shadow: 0 0.25rem palette("background-red-d10");
    &:active, &[processing="true"].anim { box-shadow: 0 0.125rem palette("background-red-d10"); }
  }
  &[data-vote="1"] button[data-action="1"] {
    background-color: palette("background-green");
    &:hover, &:focus { background-color: palette("background-green-d5"); }

    box-shadow: 0 0.25rem palette("background-green-d10");
    &:active, &[processing="true"].anim { box-shadow: 0 0.125rem palette("background-green-d10"); }
  }


  // Score display
  .ptbr-score {
    display: flex;
    box-sizing: border-box;
    justify-content: center;
    align-items: center;

    background-color: themed("color-section-lighten-5");
    box-shadow: 0 0.25rem themed("color-section");

    padding: 0 0.5rem;
    min-width: 3rem; // Fits 3-digit scores
    height: 2rem;
    font-size: 1rem;
    line-height: 1rem;

    cursor: help;
    font-family: "Roboto", Verdana, Geneva, sans-serif;
    font-weight: bold;

    // Separators between buttons and score
    border-width: 0 1px;
    border-color: themed("color-foreground");
    border-style: solid;
    &.anonymous {
      border-color: transparent;
      @include st-radius;
    }
  }

  // Score states
  &[data-state="1"] .ptbr-score { color: palette("text-green"); }
  &[data-state="-1"] .ptbr-score { color: palette("text-red"); }
}


// Favorite button
#ptbr-wrapper .ptbr-favorite-button {
  font-family: "Roboto", Verdana, Geneva, sans-serif;
  color: palette("background-gold-d10");

  &[favorited="true"] {
    svg {
      filter: url(#inset-shadow);
      fill: palette("background-gold-d10");
      stroke-width: 0;
    }
  }
}


// Fullscreen button
#ptbr-wrapper .ptbr-fullscreen-button {
  font-family: "Roboto", Verdana, Geneva, sans-serif;
  &:after {
    display: none;
    content: "Fullscreen";
  }

  @include window-larger-than(50rem) {
    width: 7rem;
    &:after { display: inline; }
    svg { display: none; }
  }
}


// Resize selector
#ptbr-wrapper .ptbr-resize select {
  height: 2rem;
  padding: 0 0.5rem;

  font-family: "Roboto", Verdana, Geneva, sans-serif;
  color: themed("palette-text-white");
  font-size: 1rem;
  line-height: 1rem;

  cursor: pointer;
  background: themed("color-section-lighten-5");
  box-shadow: 0 0.25rem themed("color-section");

  &:hover, &:focus { background: themed("color-section-lighten-10"); }
}


// Notes toggle
#ptbr-wrapper .ptbr-notes-button {
  width: 6rem;
  font-family: "Roboto", Verdana, Geneva, sans-serif;
  &:after { content: "Notes: On"; }

  &[enabled="false"] { &:after { content: "Notes: Off"; } }
}

